Test/errors/err_annotations.cb
// Annotation error tests

annotation JsonName { string value; };
annotation Private { };

// Unknown annotation name
expect_error("Unknown annotation 'Foo'") {
    struct BadUnknown {
        [Foo]
        int x = 0;
    };
}

// Annotation with unexpected argument
expect_error("does not accept arguments") {
    struct BadExtraArg {
        [Private("oops")]
        int x = 0;
    };
}

// Annotation missing required argument
expect_error("requires an argument") {
    struct BadMissingArg {
        [JsonName]
        int x = 0;
    };
}

// Unknown annotation on a class (type-level annotations are validated like fields)
expect_error("Unknown annotation 'Bogus'") {
    interface IThing { int Go(); };
    [Bogus] class BadClass : IThing {
        int Go() { return 0; }
    };
}

// [winrt] without importing com.cb is an unknown annotation (it is declared there, not built in)
expect_error("Unknown annotation 'winrt'") {
    interface IPurrLocal { int Eat(); };
    [winrt] class CatLocal : IPurrLocal {
        int Eat() { return 0; }
    };
}
